Doc/force-app/main/default/objects/Time_Entry_Compliance_Snapshot__c/fields/Resource_Exclude_From_Missing_Timecards__c.field-meta.xml
<CustomField>
    <fullName>Resource_Exclude_From_Missing_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource: Exclude From Missing Timecards</label>
    <type>Checkbox</type>
</CustomField>