Doc/force-app/main/default/objects/Time_Entry_Compliance_Snapshot__c/fields/Resource_Is_Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource_Is_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource: Is Resource</label>
    <type>Checkbox</type>
</CustomField>