Doc/force-app/main/default/objects/Time_Entry_Compliance_Snapshot__c/fields/Resource_Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Resource_Role__c</fullName>
    <label>Resource: Resource Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>