Doc/force-app/main/default/objects/Time_Entry_Compliance_Snapshot__c/fields/Resource_Work_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Resource_Work_Calendar__c</fullName>
    <label>Resource: Work Calendar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>